<resources>
    <string name="app_name">Business-i</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tabbar">TabbarActivity</string>
    <string name="Activities">Activities</string>
    <string name="Requests">Requests</string>
    <string name="appSharedPreference">busyDoor</string>
    <string name="menu_home">menu_home</string>
    <string name="menu_gallery">menu_gallery</string>
    <string name="menu_slideshow">menu_slideshow</string>

    <string name="userResponse" translatable="false">userResponse</string>

    <!--shreference-->
    <string name="isLogin">isLogin</string>
    <string name="Active">Activate</string>
    <string name="InActive">In-Activate</string>
    <string name="UserStatus">"User Status (activate/In-Activate)"</string>
    <string name="isServerRun">isServiceRun</string>
    <string name="isExample1">isExample1</string>
    <string name="isExample3">isExample3</string>
    <string name="isExample2">isExample2</string>

    <!--activity base-->
    <string name="dismiss">Dismiss</string>
    <string name="noData">No data Found</string>
    <string name="done">Done</string>
    <string name="noInternet">It looks like there is a connection issue. Please check your wifi or data settings.</string>
    <!--toast msg-->
    <string name="toast_something_wrong">Something went wrong please try again..</string>
    <string name="somethingWentWrong">Something went wrong, please try again after sometime.</string>
    <string name="networkError">There is a network error, please try again after sometime.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="internetNotAvailable">Please connect to the internet. If it is not working with WiFi please try using your mobile data.</string>
    <string name="secondPrivacyPolicy">I consent to the processing of my data as laid out in<b><u> the privacy policy</u></b></string>
    <string name="termAndConditionRegister">By continuing you agree with our <u><b>Terms &amp; Conditions </b></u>and<u><b>  Privacy Policy</b></u></string>
    <string name="doNotHaveAnAccount">Do not have an account?<b><font color="#4355E3"> Sign Up</font></b></string>
    <string name="alreadyHaveAnAccount">Already have an account?<b><font color="#4355E3"> Login</font></b></string>


    <!--test mate-->
    <string name="change_location"><u>Change location</u></string>
    <string name="waitingPermissionAccess">Waiting for the administrator to provide you the access.</string>
    <string name="addUser">Add an existing user</string>
    <string name="createUser">Create a new user</string>
    <string name="title_activity_dashboard_drawer">DashboardDrawerActivity</string>
    <string name="drawerOpen">Open navigation drawer</string>
    <string name="drawerClose">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loginHeader"><b>Login</b></string>
    <string name="loginBtn"><b>LOGIN</b></string>
    <string name="logOutHeader"><b></b></string>
    <string name="signInHeader"><b>Sign Up</b></string>
    <string name="otpHeader"><b>OTP Verification</b></string>
    <string name="enterCode">Enter Code</string>
    <string name="resendCode"><b>Resend code</b></string>
    <string name="otpMessage">Enter the 6 digit code that you received in your registered mobile number</string>
    <string name="enterMobile">Enter your mobile number <font color="#ff0000"><bold>*</bold></font></string>
    <string name="mobileHint">Mobile Number <font color="#ff0000"><bold>*</bold></font></string>
    <string name="firstNameHint">First name <font color="#ff0000"><bold>*</bold></font></string>
    <string name="lastNameHint">Last name <font color="#ff0000"><bold>*</bold></font></string>
    <string name="accessHint">Access level <font color="#ff0000"><bold>*</bold></font></string>
    <string name="resendHint">You can Resend code after <font color="#4355E3"><bold>03 </bold></font>sec</string>
    <string name="menuHome">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="dummyUserName">Merin Thomas</string>
    <string name="dummyPremiseName">Premise Complex</string>
    <string name="dummyCityName">Chennai, India.</string>
    <string name="dummyPremiseCityName">Coimbatore, India.</string>
    <string name="serverToken">eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIsImp0aSI6ImI2NWU4MDA5ZDg4YjE1YjcwYmIzMTQ4YTM2ZGRkZTg4MjBhNTRkN2RlOWFkOGY3YmZiMzQ4MDVkZWM5YjU3ZmRlYWVlNmMyZTdhYjhlMjY2In0.eyJhdWQiOiIzIiwianRpIjoiYjY1ZTgwMDlkODhiMTViNzBiYjMxNDhhMzZkZGRlODgyMGE1NGQ3ZGU5YWQ4ZjdiZmIzNDgwNWRlYzliNTdmZGVhZWU2YzJlN2FiOGUyNjYiLCJpYXQiOjE3MDE4Njg2ODQsIm5iZiI6MTcwMTg2ODY4NCwiZXhwIjoxNzMzNDkxMDg0LCJzdWIiOiIxIiwic2NvcGVzIjpbXX0.GIO864LTuYeH_nW80IiF1ScssfacTG82ON6vO7qGvzUeV7OhNsvpSrPRnQU_52lbAw6sTG7GCju7D7tV9G_MDyHb0Vf2Cc8vykNy1omR3qUeGjZkGvLCEK1a2RjTiiCrf4tyvFGC16aaFXaNFzNgcDIw9a-zyZHDr-PITy44IvjuxY-1xkLX9yccWxtEUwi2t0BvYJ7sQmJX5darnAeAxOuMGVz2MDd3NR-iAyX-jArCbKcvcrjFAPBSrHoXtF5lvFoLs-J6N5hIlD2qc0HpSAA8DYNiP1vsIZipK-IgY9mpRN-pu7bv44VZE7b07LS7hybj0eIopXdv2kshfl6lUUtKQl_ESVTJxEY_DQyjZog4p6RF5YHDstuERPFQKksH0Zw-JrEaKIPHZWNFsi8CHil-qPe8lEJNDmSmpDSorWQUtdHd9ZHAt03WqjU7FHEVZcfZqi8-4fgzh2s6PY-BrQNE57XVG8uDufJQJa4Jaqr7U3iP1ll2FPOB2LS5Op9xq_mutBkfyEkfzpMlmHD0LPJniCJIaE1zlpR42YGFdc6mwr4UKY_mGyvMgrDwEqfk0jdglxSmAfpOUZcPhYrxsRxJa8M07-Cd7TKcsmfRNTU4NhdZzYSfuTGf0hOSHANkIbNyY6dWRvjFTFQkNMuI_TsdxEIFhTB3w85mE5dQBP8</string>
    <string name="localToken">eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiIsImp0aSI6IjlhM2E3YThhZDY2ZWFkMzJkZTdhNGY4MGMxMzYzNWQxZTViMGFlOGI3NGI2NjIwMjgyNDMyZTg5NzYwYWRkODZjYWY3MWI5YzA5Y2I4MGI5In0.eyJhdWQiOiIzIiwianRpIjoiOWEzYTdhOGFkNjZlYWQzMmRlN2E0ZjgwYzEzNjM1ZDFlNWIwYWU4Yjc0YjY2MjAyODI0MzJlODk3NjBhZGQ4NmNhZjcxYjljMDljYjgwYjkiLCJpYXQiOjE3MDE3NTM1MTgsIm5iZiI6MTcwMTc1MzUxOCwiZXhwIjoxNzMzMzc1OTE4LCJzdWIiOiIxIiwic2NvcGVzIjpbXX0.Yhx5THi_THSpIsJgxFcEULp2eFIYRZ1pdYy4hB8z7FbZqCwR8rsr6ZsVt8jV4q5PpxKn55o3l3KAydV5y1fwRw_MwE_7Wn1-lmtW_laPqUzbZWcEMoZOqRWmtHG6sdV32Nm6g-tAerRRODftNo5xoojR4DjuOPm5RolkFeRx8JykZXr0VqctH54miwodxYMdn-m9rovku60gSbT0B8pxf_kNERz4s4c5xzJRm7-Z8CWz4XkTk3SnjfWST9YipLRyVk7FYq6XTrtVjyPAh6eheTrB7t5d2hkquZfinVXDonlWMwek5aG-16SBtt_57PuFJyNlIlL6zOn67MmeD9G0_VjK6YinLKKH8J-WCQCO6CBs67dN9a9i8_XwUAPBcOSrTt91d_8475NbAXes7aJ_JR2Di73LFFC0sgC7xGW_oFIGLjzzcW8rPOL5KmsW2fpnQrhrc5j2gskT6eUt6WA7EzR4OUkPK_d-_bsO_T2mFJ1-9VRlB82fCJ-bwPkC7xocqOeMR0yNiZxMfFhsV5BzZ-10NzrLHoeNZjZ17l3qTszA_0BwrVOvvtArfAIDAJmMx74yQAT8uRm-WlO_2g9ukxi5tYocr8rgx_DlhVTBaam-zY4GdSsSL9QpJzrj7ros5A_iVtpuJbuZBDaejjafOx2f2pIIixGi324Cfle5rg8</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="staffPresent">Staff</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <!---Error Message-->
    <string name="error_empty_first_name">First name cannot be empty.</string>
    <string name="error_short_first_name">First name should be at least 3 characters long.</string>
    <string name="error_last_name_required">Last name should not be empty and must have at least one character.</string>
    <string name="error_spinner_required">Please select an option.</string>
    <string name="validMobileNumber">Please enter valid mobile number</string>
    <string name="title_activity_staff_detail_graph">StaffDetailGraphActivity</string>
</resources>