<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".activity.LoginHomeActivity">

    <LinearLayout
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

            <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_gravity="center"
            android:src="@drawable/login_image"
            android:layout_marginTop="@dimen/_35sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">

            <com.busydoor.app.customMethods.MyCustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/loginHeader"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sdp" />


            <LinearLayout
                android:id="@+id/cv_login_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_weight="1"
                android:background="@drawable/textfield_shapes"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="28dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_1sdp"
                    android:layout_marginEnd="@dimen/_1sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.busydoor.app.customMethods.MyCustomTextView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="match_parent"
                            android:gravity="start|center"
                            android:background="@drawable/iconphone"
                            android:padding="@dimen/_5sdp" />

                        <com.busydoor.app.customMethods.MyCustomTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="start|center"
                            android:padding="@dimen/_2sdp"
                            android:text="+91"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold"/>

                        <com.busydoor.app.customMethods.MyCustomEdittext
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="1234567890"
                            android:backgroundTint="@color/appBackground"
                            android:layout_marginStart="@dimen/_1sdp"
                            android:drawablePadding="@dimen/_5sdp"
                            android:hint="@string/enterMobile"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:gravity="center|left"
                            android:layout_gravity="center"
                            android:id="@+id/phoneNumber"
                            android:padding="@dimen/_5sdp"
                            android:textColor="@color/black"
                            android:textColorHint="#CCCCCC"
                            android:textSize="@dimen/_13sdp"
                            android:maxLength="10" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


            <com.busydoor.app.customMethods.MyCustomButton
                android:id="@+id/btnSignIn"
                android:layout_width="@dimen/_265sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/app_color"
                android:background="@drawable/button_shapes"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="center"
                android:elevation="@dimen/_15sdp"
                android:text="@string/loginBtn"
                android:outlineAmbientShadowColor="@color/black"
                android:shadowRadius="10"
                android:shadowColor="@color/black"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />


            <com.busydoor.app.customMethods.MyCustomTextView
                android:id="@+id/textSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_150sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:gravity="center|bottom"
                android:text="@string/doNotHaveAnAccount"
                android:textColor="#7A7170"
                android:textSize="@dimen/_13sdp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_register"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>